# BelotAI-c-

./: Analyzer.cpp  Analyzer.h  AnnounceTracker.cpp  AnnounceTracker.h  CMakeLists.txt  Card.cpp  Card.h  CardCounter.cpp  CardCounter.h  CurrentDeal.cpp  CurrentDeal.h  GamePlayer.cpp  GamePlayer.h  Helper.cpp  Helper.h  HumanPlayer.cpp  HumanPlayer.h  Main.cpp  README.md  constants.h
